Fix text layout bug showing up in Firefox

--- a/src/style.scss
+++ b/src/style.scss
@@ -635,7 +635,7 @@ svg text {
 
 						&.left {
 							float: left;
-							shape-outside: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 58 88' width='58' height='88' class='left'%3E%3Cdefs%3E%3Cmask id='slice-content-text-shape-outside-mask-left'%3E%3Crect width='100' height='100' x='-12' fill='white' /%3E%3Ccircle style='r: 68px' cx='88' cy='0' fill='black' /%3E%3C/mask%3E%3C/defs%3E%3Crect width='100' height='100' x='-12' fill='black' mask='url(%23slice-content-text-shape-outside-mask-left)' /%3E%3Ccircle style='r: 30px' cx='88' cy='0' fill='black' /%3E%3C/svg%3E");
+							shape-outside: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 58 60' width='58' height='60' class='left'%3E%3Cdefs%3E%3Cmask id='slice-content-text-shape-outside-mask-left'%3E%3Crect width='100' height='100' x='-12' fill='white' /%3E%3Ccircle style='r: 68px' cx='88' cy='0' fill='black' /%3E%3C/mask%3E%3C/defs%3E%3Crect width='100' height='100' x='-12' fill='black' mask='url(%23slice-content-text-shape-outside-mask-left)' /%3E%3Ccircle style='r: 30px' cx='88' cy='0' fill='black' /%3E%3C/svg%3E");
 						}
 
 						&.right {
